force-app/main/default/objects/SAP_StockWarehouses__x/SAP_StockWarehouses__x.object-meta.xml
<CustomObject>
    <description>SAP_StockWarehousesSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SAP_StockWarehousesSet</externalName>
    <label>SAP_StockWarehouses</label>
    <pluralLabel>SAP_StockWarehousesSet</pluralLabel>
</CustomObject>