force-app/main/default/objects/SAP_StockWarehouses__x/fields/ATPGroup__c.field-meta.xml
<CustomField>
    <fullName>ATPGroup__c</fullName>
    <description>ATPGroup</description>
    <externalDeveloperName>ATPGroup</externalDeveloperName>
    <label>ATPGroup</label>
    <length>3</length>
    <type>Text</type>
</CustomField>