force-app/main/default/objects/SAP_StockWarehouses__x/fields/DestinationWarehouse__c.field-meta.xml
<CustomField>
    <fullName>DestinationWarehouse__c</fullName>
    <description>DestinationWarehouse</description>
    <externalDeveloperName>DestinationWarehouse</externalDeveloperName>
    <label>DestinationWarehouse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>