force-app/main/default/objects/SAP_StockWarehouses__x/fields/DirectShipment__c.field-meta.xml
<CustomField>
    <fullName>DirectShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DirectShipment</description>
    <externalDeveloperName>DirectShipment</externalDeveloperName>
    <label>DirectShipment</label>
    <type>Checkbox</type>
</CustomField>