force-app/main/default/objects/SAP_StockWarehouses__x/fields/Dropshipments__c.field-meta.xml
<CustomField>
    <fullName>Dropshipments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dropshipments</description>
    <externalDeveloperName>Dropshipments</externalDeveloperName>
    <label>Dropshipments</label>
    <type>Checkbox</type>
</CustomField>