force-app/main/default/objects/SAP_StockWarehouses__x/fields/IsATP__c.field-meta.xml
<CustomField>
    <fullName>IsATP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsATP</description>
    <externalDeveloperName>IsATP</externalDeveloperName>
    <label>IsATP</label>
    <type>Checkbox</type>
</CustomField>