force-app/main/default/objects/SAP_StockWarehouses__x/fields/IsZSTK__c.field-meta.xml
<CustomField>
    <fullName>IsZSTK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsZSTK</description>
    <externalDeveloperName>IsZSTK</externalDeveloperName>
    <label>IsZSTK</label>
    <type>Checkbox</type>
</CustomField>