force-app/main/default/objects/SAP_StockWarehouses__x/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <description>Plant</description>
    <externalDeveloperName>Plant</externalDeveloperName>
    <label>Plant</label>
    <length>4</length>
    <type>Text</type>
</CustomField>