force-app/main/default/objects/SAP_StockWarehouses__x/fields/ReservationsBlock__c.field-meta.xml
<CustomField>
    <fullName>ReservationsBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ReservationsBlock</description>
    <externalDeveloperName>ReservationsBlock</externalDeveloperName>
    <label>ReservationsBlock</label>
    <type>Checkbox</type>
</CustomField>