force-app/main/default/objects/SAP_StockWarehouses__x/fields/ShippingBlock__c.field-meta.xml
<CustomField>
    <fullName>ShippingBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ShippingBlock</description>
    <externalDeveloperName>ShippingBlock</externalDeveloperName>
    <label>ShippingBlock</label>
    <type>Checkbox</type>
</CustomField>