force-app/main/default/objects/SAP_StockWarehouses__x/fields/TwoSteps__c.field-meta.xml
<CustomField>
    <fullName>TwoSteps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TwoSteps</description>
    <externalDeveloperName>TwoSteps</externalDeveloperName>
    <label>TwoSteps</label>
    <type>Checkbox</type>
</CustomField>