force-app/main/default/objects/SAP_StockWarehouses__x/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>Warehouse</description>
    <externalDeveloperName>Warehouse</externalDeveloperName>
    <label>Warehouse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>